@@ -37,10 +37,10 @@ if ( file_exists( ICMS_ROOT_PATH . '/modules/' . $mydirname . '/language/'. $icm
 } else { include_once ICMS_ROOT_PATH . '/modules/' . $mydirname . '/language/english/moduleabout.php'; }
 
 $modversion['name'] 			= _MI_IMLINKS_NAME;
-$modversion['version']			= '1.12';
-$modversion['date'] 			= '7 April 2012';
-$modversion['status']			= 'Final';
-$modversion['status_version']	= 'Final';
+$modversion['version']			= '1.13';
+$modversion['date'] 			= 'xx xxxxx 2012';
+$modversion['status']			= 'Trunk';
+$modversion['status_version']	= 'Trunk';
 $modversion['description'] 		= _MI_IMLINKS_DESC;
 $modversion['license']			= _MI_IMLINKS_ABOUTLICENSE;
 $modversion['image']			= 'images/imlinks_ilogo.png';		// standard XOOPS icon, 92x52 px  
@@ -88,10 +88,10 @@ $modversion['people']['other'][] = '<a href="http://script.aculo.us" target="_bl
 $modversion['manual'][] = '<a href="http://www.assembla.com/code/impresscmsaddons/subversion/nodes/modules/imlinks/docs/imlinks_manual.pdf" target="_blank">English [PDF]</a>';
 
 // ** If Release Candidate **
-// $modversion['warning'] = _MODABOUT_IMLINKS_WARNING_RC;
+$modversion['warning'] = _MODABOUT_IMLINKS_WARNING_RC;
 
 // ** If Final  **
-$modversion['warning'] = _MODABOUT_IMLINKS_WARNING_FINAL;
+// $modversion['warning'] = _MODABOUT_IMLINKS_WARNING_FINAL;
 
 // Sql file (must contain sql generated by phpMyAdmin or phpPgAdmin)
 // All tables should not have any prefix!
