@@ -1,4 +1,10 @@
 ﻿=========================================================
+xx.xx.2012 - Trunk
+=========================================================
+Fixed:
+- Rating feature not working
+
+=========================================================
 07.04.2012 - Version 1.12
 =========================================================
 Fixed:
